# docsmind

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/eval/: retrieval_queries.json
data/sample_docs/: black_holes.md  faiss_index_types.md  kubernetes_gpu.md  rag_overview.md  rocket_propulsion.md  solar_system.md  stellar_lifecycle.md  the_iss.md  vllm_serving.md
docs/: README.md  _diagrams.js  build.js  index.html
docs/01-chunks-and-overlap/: README.md  real-examples.md  what-is-a-chunk.md  why-overlap.md
docs/02-embeddings/: problem-text-is-not-numbers.md  real-examples.md  similar-text-similar-vectors.md  what-is-an-embedding.md
docs/03-normalization/: README.md  code-example.md  why-length-1.md
docs/04-vector-similarity/: search-example.md  similarity-scores.md
docs/05-faiss/: README.md  code-walkthrough.md  how-search-works.md  phase1-vs-phase2.md
docs/06-full-pipeline/: README.md  real-query-example.md
docs/06-generation/: building-context.md  citation-extraction.md  claude-generates.md  guardrail.md
docs/07-full-pipeline/: 4-step-flow.md  phase1-end-to-end.md
docs/07-interview-prep/: README.md  cheat-sheet.md
docs/08-interview-prep/: README.md  cheat-sheet.md
docs/09-hybrid-retrieval/: README.md
docs/11-hyde/: README.md
docsmind/: __init__.py  config.py  factory.py  pipeline.py  schemas.py
docsmind/agent/: __init__.py
docsmind/eval/: __init__.py
docsmind/index/: __init__.py  base.py  embeddings.py  faiss_store.py  qdrant_store.py
docsmind/ingestion/: __init__.py  chunker.py  loaders.py
docsmind/llm/: __init__.py  base.py  cloud_client.py  local_client.py
docsmind/ops/: __init__.py
docsmind/retrieval/: __init__.py  bm25.py  fusion.py  reranker.py  retriever.py
docsmind/serving/: app.py
scripts/: benchmark.py  demo.py  ingest.py  retrieval_eval.py
tests/: test_bm25.py  test_chunker.py  test_config.py  test_faiss_store.py  test_fusion.py  test_hybrid_retriever.py  test_pipeline.py  test_qdrant_store.py
